# unicode-input-panel

./: .gitignore  .gitmodules  LICENCE  README.md  USER_MANUAL.md  pyrightconfig.json  requirements.txt  run.sh
drawings/: basic-enclosure.scad
firmware/: CMakeLists.txt  defs.h  embeds.cpp  embeds.hh  filesystem.cpp  filesystem.hh  font.cpp  font.hh  font_indexer.cpp  font_indexer.hh  hw_config.c  main.cpp  main_ui.cpp  main_ui.hh  st7789.c  st7789.h  svg.cpp  svg.hh  tusb_config.h  unicode_data.h  unicode_db.cpp  unicode_db.hh  usb.c  usb.h  usb_descriptors.c  usb_descriptors.h  util.cpp  util.hh
firmware/assets/: shift-lock.xcf
firmware/fatfs_spi/: CMakeLists.txt  source.txt
firmware/fatfs_spi/ff14a/source/: ffconf.h
firmware/fatfs_spi/sd_driver/: sd_spi.c  spi.h
firmware/host/: host_filesystem.cpp  host_main.cpp  host_st7789.c
firmware/ui/: codepoint_view.cpp  codepoint_view.hh  common.cpp  common.hh  font.cpp  font.hh  glyph_display.cpp  glyph_display.hh  icons.cpp  icons.hh  main_ui.cpp  main_ui.hh  numeric_view.cpp  numeric_view.hh  utf8_view.cpp  utf8_view.hh
rust-bake-codepoints/: Cargo.toml
rust-bake-codepoints/src/: main.rs
scripts/: build-metadata.py  convert-to-rgb6bpp.py  namedb.py  pack-unicode-data.py  render-codepoints.py  size.sh  split-font.py
test/: Makefile  stream  stream.cpp
